# voguescraper

./: .gitignore  LICENSE  pyproject.toml  readme.md  requirements.txt  test_vogue.py  vogue.py
tests/: test_vogue.py
vogue/: __init__.py  __main__.py  cli.py  scraper.py
