[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "voguescraper"
version = "2.0.0"
description = "Agent-friendly CLI for scraping Vogue Runway fashion show images"
readme = "readme.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.28",
    "beautifulsoup4>=4.11",
    "html5lib>=1.1",
    "unidecode>=1.3",
]

[project.scripts]
vogue = "vogue.cli:main"

[project.urls]
Repository = "https://github.com/jaceyang97/voguescraper"

[tool.setuptools.packages.find]
include = ["vogue*"]
